--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "csrf-csrf": "^3.0.6",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.19.1",
     "express-flash": "^0.0.2",
     "express-session": "^1.18.0",
+    "helmet": "^7.1.0",
     "method-override": "^3.0.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
